<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0097A7">

    <Button
        android:id="@+id/cancel"
        android:layout_width="211dp"
        android:layout_height="77dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="338dp"
        android:layout_marginRight="338dp"
        android:text="@android:string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:backgroundTint="#9A3838"
        app:layout_constraintEnd_toStartOf="@+id/updatePatientToDB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientDescription" />

    <Button
        android:id="@+id/updatePatientToDB"
        android:layout_width="211dp"
        android:layout_height="77dp"
        android:layout_marginStart="619dp"
        android:layout_marginLeft="619dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/add_patient"
        android:textColor="#0097A7"
        android:textSize="25sp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientDescription" />

    <EditText
        android:id="@+id/patientDescription"
        android:layout_width="685dp"
        android:layout_height="275dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:autofillHints="Add any additional information, if necessary"
        android:background="@drawable/round"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description_if_necessary"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/addPatientTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="215dp"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="215dp"
        android:layout_marginRight="215dp"
        android:text="@string/add_new_patient"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/patientFirstName"
        android:layout_width="685dp"
        android:layout_height="90dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:ems="15"
        android:hint="@string/patient_first_name"
        android:inputType="textPersonName"
        android:linksClickable="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:background="@drawable/round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPatientTitle" />

    <EditText
        android:id="@+id/patientLastName"
        android:layout_width="685dp"
        android:layout_height="90dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:background="@drawable/round"
        android:ems="15"
        android:hint="@string/patient_last_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientFirstName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="685dp"
        android:layout_height="90dp"
        android:layout_margin="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round"
        android:ems="15"
        android:hint="Click and Select Gender"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintTop_toBottomOf="@+id/patient_date_of_birth">

        <AutoCompleteTextView
            android:id="@+id/gender"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/patient_date_of_birth"
        android:layout_width="685dp"
        android:layout_height="90dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:background="@drawable/round"
        android:ems="15"
        android:hint="@string/date_of_birth"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientLastName" />

</androidx.constraintlayout.widget.ConstraintLayout>